--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="./style.css">
     <title>Nav Bar</title>
 </head>
 <body>
-    <h1>Responsive Navigation Bar Practise</h1>
+
+ <nav>
+<lable class="logo">Shehzad</lable>
+<ul>
+    <li><a href="#" class="active">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact</a></li>
+    <li><a href="#">Feedback</a></li>
+    <li><a href="#">Buy Now</a></li>
+</ul>    
+
+
+ </nav>
+
+
+
+
+
+
+    <h1>Navigation Bar Practise</h1>
 </body>
 </html>
