--- a/buynow.html
+++ b/buynow.html
@@ -12,11 +12,11 @@
  <nav>
 <lable class="logo">Shehzad</lable>
 <ul>
-    <li><a href="./index.html" class="active">Home</a></li>
+    <li><a href="./index.html" >Home</a></li>
     <li><a href="./about.html">About</a></li>
     <li><a href="./contact.html">Contact</a></li>
     <li><a href="./feedback.html">Feedback</a></li>
-    <li><a href="./buynow.html">Buy Now</a></li>
+    <li><a href="./buynow.html" class="active">Buy Now</a></li>
 </ul>    
 
 
@@ -24,6 +24,6 @@
 
 
 
-    <h1>Navigation Bar Practise</h1>
+    <h1>Buy Now Page</h1>
 </body>
 </html>
