--- a/feedback.html
+++ b/feedback.html
@@ -12,10 +12,10 @@
  <nav>
 <lable class="logo">Shehzad</lable>
 <ul>
-    <li><a href="./index.html" class="active">Home</a></li>
+    <li><a href="./index.html" >Home</a></li>
     <li><a href="./about.html">About</a></li>
     <li><a href="./contact.html">Contact</a></li>
-    <li><a href="./feedback.html">Feedback</a></li>
+    <li><a href="./feedback.html" class="active">Feedback</a></li>
     <li><a href="./buynow.html">Buy Now</a></li>
 </ul>    
 
@@ -24,6 +24,6 @@
 
 
 
-    <h1>Navigation Bar Practise</h1>
+    <h1>feedback page</h1>
 </body>
 </html>
