--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./mobilestyle.css" media="(max-device-width:450px)">
     <title>Nav Bar</title>
 </head>
 
@@ -21,15 +22,15 @@
             <li><a href="./pages/buynow.html">Buy Now</a></li>
         </ul>
     </nav>
-<main>
+    <main>
 
-    
-    <h1>Navigation Bar Practise</h1>
 
-    <!-- <img src="./img/shehzad photography white.png" alt="" width="250px">
+        <h1>Navigation Bar Practise</h1>
+
+        <!-- <img src="./img/shehzad photography white.png" alt="" width="250px">
     <img src="./img/shehzad photography-black.png" alt="" width="250px"> -->
-    
-</main>
+
+    </main>
     <footer>
         <p>Developed by Shehzad</p>
         <ul class="iconscontainer">
