--- a/pages/about.html
+++ b/pages/about.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Nav Bar</title>
 </head>
+
 <body>
 
     <nav>
         <lable class="logo">Shehzad</lable>
         <ul>
             <li><a href="../index.html" class="active">Home</a></li>
-            <li><a href="./pages/about.html">About</a></li>
-            <li><a href="./pages/contact.html">Contact</a></li>
-            <li><a href="./pages/feedback.html">Feedback</a></li>
-            <li><a href="./pages/buynow.html">Buy Now</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="./feedback.html">Feedback</a></li>
+            <li><a href="./buynow.html">Buy Now</a></li>
         </ul>
     </nav>
-<main>
+    <main>
 
-    
-    <h1>About Page</h1>
 
-    <!-- <img src="./img/shehzad photography white.png" alt="" width="250px">
+        <h1>About Page</h1>
+
+        <!-- <img src="./img/shehzad photography white.png" alt="" width="250px">
     <img src="./img/shehzad photography-black.png" alt="" width="250px"> -->
-    
-</main>
+
+    </main>
     <footer>
         <p>Developed by Shehzad</p>
         <ul class="iconscontainer">
@@ -76,4 +78,5 @@
 
 
 </body>
+
 </html>
